# ospray

./: .dir-locals.el  .dockerignore  .gitignore  Dockerfile  premake.sh  release.ps1  release.sh
apps/: CMakeLists.txt
apps/common/ospray_testing/: CMakeLists.txt
apps/exampleViewer/: CMakeLists.txt  ospExampleViewer.cpp
apps/ospExamples/: GLFWOSPRayWindow.cpp
apps/ospSimulator/: CMakeLists.txt  GLFWOSPRayWindow.cpp  GLFWOSPRayWindow.h
apps/ospSimulator/tfn/: DefaultTransferFunctionMaps.h  HelperFunctions.h  TransferFunctionModule.h  TransferFunctionWidget.cpp  TransferFunctionWidget.h  core.h  helper.h  tfn_widget.h  widget.h
apps/ospTestSuite/: test_volumetric.cpp
apps/ospTutorial/: CMakeLists.txt  ospTutorialSceneGraph.cpp
apps/standalone/: CMakeLists.txt  standalone.cpp
components/ospcommon/: malloc.h
configure/mcs.anl.gov/: premake.soprano.mcs.anl.gov.sh
modules/mpi/: CMakeLists.txt
ospray/: CMakeLists.txt
ospray/common/: World.h
ospray/geometry/: GeometricModel.ispc  Isosurfaces.cpp
ospray/volume/: Volume.cpp  VolumetricModel.h
premake/fsm/: premake.fsm.normal.sh
premake/hastur/: premake.hastur.normal.sh  premake.hastur.visit.sh
premake/lagodelcielo/: premake.lagodelcielo.normal.sh  premake.lagodelcielo.visit.sh
premake/mcs.anl.gov/: premake.voxel.mcs.anl.gov.sh
premake/ucdavis.edu/: premake.plenoptic.devel.sh  premake.plenoptic.master.sh  premake.plenoptic.visit.sh
premake/wopr/: premake.wopr.normal.sh
scripts/: build_deps.sh
scripts/superbuild/: CMakeLists.txt
scripts/tests/: run_tests.sh
(+31 files in other folders)
